Adding style changes to the LDS tables and adding modal backdrop

--- a/include/dashboardcb.css
+++ b/include/dashboardcb.css
@@ -206,7 +206,7 @@ div#addWidgetDropDown {
 	display: flex;
 	flex-flow: wrap;
 	width: 100%;
-	justify-content: space-around;
+	justify-content: flex-start;
 }
 
 .dash-item-bg-light {
